<resources>
    <string name="app_name">Picture Notes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ok">OK</string>
    <string name="before_we_select_pictures">before we select pictures..</string>
    <string name="create_a_unique_code_for_collection">Create a unique name for collection :</string>
    <string name="describe_your_collection_optional">Describe your collection (optional) :</string>
    <string name="the_app_would_like_permission_to_access">The app would like permission to access</string>
    <string name="grant">Grant</string>
    <string name="user_data_n_user_contacts_n_google_account_data">* User data\n* User contacts\n* Google account data</string>
    <string name="find">Find</string>
    <string name="note_you_wish_to_check">Note you wish to check</string>
    <string name="favorite_your_notes_to_find_them_at_home">Favorite your notes to find them at home</string>
    <string name="delete_image_s_from_phone">Delete Image(s) from phone</string>
    <string name="creating_a_note">Creating a Note</string>
    <string name="here_we_write_description">Here we write description of the notes, its optional</string>
    <string name="selecting_images">Selecting Images</string>
    <string name="now_press_next">Now press Next to open gallery and select images</string>
    <string name="here_we_write_a_unique_code">Here we write a unique name for the notes</string>
    <string name="next">Next</string>
    <string name="enter_code_to_create_a_note">Enter a unique name</string>
    <string name="code_already_exists">Name already exists, would you like to open it</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="enter_code_to_search">Enter Name to Search</string>
    <string name="do_you_wish_to_imort_from_this_url">Do u wish to import from this url?</string>
    <string name="import_title">Import</string>
    <string name="do_you_wish_to_import_this_file">Do u wish to import this file?</string>
    <string name="this_app_needs_to_access_your_google_account">This app needs to access your Google account (via Contacts).</string>
    <string name="local">Local</string>
    <string name="from_drive">From Drive</string>
    <string name="from_where_you_would_like_to_import">From where you would like to import</string>
    <string name="lets_make_a_note">Lets make a Note</string>
    <string name="tap_the_plus_button_to_create_note">Tap the plus button to create a notes</string>
    <string name="skip">skip</string>
    <string name="loading_please_wait">Loading, Please wait…</string>
    <string name="unzipping_please_wait">Unzipping, Please wait..</string>
    <string name="done_importing">Done Importing</string>
    <string name="importing_failed">Importing failed</string>
    <string name="new_code">New Name</string>
    <string name="code_space">"Name "</string>
    <string name="space_already_exists">" Already Exists!"</string>
    <string name="submit">Submit</string>
    <string name="downloading_please_wait">Downloading, Please Wait..</string>
    <string name="share_note_has_been_changed">Share Note has been Changed (or removed), ask the sharer to send again</string>
    <string name="the_following_error_occurred">The following error occurred:\n</string>
    <string name="request_cancelled">Request cancelled.</string>
    <string name="fetching_data_please_wait">Fetching Data, Please Wait..</string>
    <string name="found_file">Found File</string>
    <string name="no_back_up_found">No Backup Found</string>
    <string name="space_backup_deleted_from_drive">" backup deleted from Drive"</string>
    <string name="which_one_would_you_like_to_restore">Which one whould you like to restore</string>
    <string name="Request_cancelled">Request cancelled.</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="need_permission_to_use_the_app">Need Permission to use the app</string>
    <string name="view_tutorial_again">View Tutorial Again</string>
    <string name="faqs">FAQs</string>
    <string name="about_devs">About Devs</string>
    <string name="any_suggestions">Any Suggestions?</string>
    <string name="donate">Donate</string>
    <string name="go_back_to_home_to_view">Go back to Home to view the tutorial again</string>
    <string name="no_image_found_with_given_code">No images found with given Name</string>
    <string name="view_image">View Image</string>
    <string name="tap_on_any_image_to_view_it">Tap on any Image to view it</string>
    <string name="re_arrange_images">Re-arrange Images</string>
    <string name="tap_hold_move_images">Tap, Hold, Move the Images to Move</string>
    <string name="actions">Actions</string>
    <string name="you_can_share_backup_favourite_remove_notes">You can Favourite, Share, Backup, Remove notes</string>
    <string name="this_can_be_done_from_action_bar">This can be done from action bar above</string>
    <string name="enjoy">Enjoy!</string>
    <string name="tutorial_can_be_viewed_again_from_settings">Tutorial can be viewed again from the Settings</string>
    <string name="close">Close</string>
    <string name="your_note">Your Note</string>
    <string name="here_is_your_note">Here is your Note</string>
    <string name="cant_exceed_maximum_limit_of_30_images">Can\'t exceed maximum limit of 30 Images</string>
    <string name="unfavourite">Unfavourite</string>
    <string name="favourite">Favourite</string>
    <string name="delete_images">Delete Image(s)?</string>
    <string name="delete">Delete</string>
    <string name="select_images_to_delete_first">Select Images to delete first</string>
    <string name="delete_note">Delete Note?</string>
    <string name="remove">Remove</string>
    <string name="to_drive">To Drive</string>
    <string name="where_would_you_like_to_backup">Where would you like to backup</string>
    <string name="exporting_file">Exporting file</string>
    <string name="couldnt_find_all_images">Could\'nt find all the image, delete those image and try again</string>
    <string name="exported_to_space">"Exported to "</string>
    <string name="uploading_to_drive">Uploading, will take some time..</string>
    <string name="uploaded_to_drive">Upload complete</string>
    <string name="shared_via_space">"Shared via "</string>
    <string name="code">Name</string>
    <string name="share_via">Share Via…</string>
    <string name="change_name">Change name</string>
    <string name="apply">Apply</string>
    <string name="max_10_characters">max 10 characters</string>
    <string name="space_file_not_found">" file not found"</string>
    <string name="select_type_of_message">Select type of message</string>
    <string name="space_more">%d more</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="developers">Developers</string>
    <string name="check_for_update">Check for Updates</string>
    <string name="downloading_note">Downloading File</string>
    <string name="download_in_progress">Download in progress</string>
    <string name="downloading_file">Downloading File..</string>
    <string name="download_complete">Download complete</string>
    <string name="cant_find_image">Can\'t find Image</string>
    <string name="don_t_do_anything">Don\'t do anything</string>
    <string name="copy_the_images">Copy the images</string>
    <string name="move_the_images">Move the images</string>
    <string name="change_copy_mode">Change Storing Mode</string>
    <string name="hide">HIDE</string>
    <string name="uploading_hide_toast">We will prompt you when upload is complete, don\'t close the app</string>
    <string name="just_to_show_how_it_works">Just to show how it works</string>
    <string name="edit_code_and_description">Edit name and description</string>



    <string name="album">Album</string>
    <string name="camera">camera</string>
    <string name="done">done</string>
    <string name="msg_no_slected">There is no selected image.</string>
    <string name="str_all_view">All view</string>
    <string name="msg_permisssion">permission deny</string>
    <string name="msg_no_image">There is no image.</string>
    <string name="msg_full_image">You can\'t no longer choose.</string>
    <string name="enter_a_code">Enter a name</string>
    <string name="code_must_be_unique">Name must be unique</string>
    <string name="the_name_is_too_long">The name is too long</string>
    <string name="the_desc_is_too_long">The description is too long</string>
    <string name="select_images">Select Images</string>

</resources>
