<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_permision_asking"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.definex.picturenotes.activity.PermisionAskingActivity"
    android:background="@drawable/permision">

    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:text="@string/grant"
        android:textColor="@color/textIcons"
        android:textSize="14sp"
        android:id="@+id/grantPermissionButton"/>
    
    <TextView
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:text="@string/the_app_would_like_permission_to_access"
        android:textColor="@color/textIcons"
        android:textSize="34sp"
        android:layout_centerVertical="true"
        android:paddingLeft="30dp"
        android:paddingStart="30dp"
        android:id="@+id/textView5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:text="@string/user_data_n_user_contacts_n_google_account_data"
        android:textColor="@color/textIcons"
        android:paddingTop="15dp"
        android:paddingLeft="70dp"
        android:paddingStart="70dp"
        android:textSize="20sp"/>


</RelativeLayout>
