<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="in.definex.picturenotes.activity.MainActivity"
    android:orientation="vertical"
    android:background="@color/background">


    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:focusableInTouchMode="true"

        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/find"
            android:id="@+id/see_note"
            android:background="@drawable/find_button_shape"
            android:textColor="@color/textIcons"
            android:layout_alignBottom="@+id/editText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/editText" />

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/editText"
            android:hint="@string/note_you_wish_to_check"
            android:background="@drawable/edit_text_shape"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/see_note"
            android:layout_toStartOf="@+id/see_note"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorite_your_notes_to_find_them_at_home"
            android:textColor="@color/colorPrimary"
            android:layout_below="@+id/editText"
            android:paddingTop="10dp"
            android:id="@+id/textview"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/divider"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_below="@+id/textview"/>

    </RelativeLayout>



    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/favRecycler" />

</LinearLayout>
