<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.CreateNoteActivity"
    android:background="@color/background">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbarContainer"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarContainer"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/before_we_select_pictures"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:id="@+id/textView2"
            android:layout_marginTop="30dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_a_unique_code_for_collection"
            android:textStyle="bold"
            android:textColor="@color/tertiaryText"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/codeEditText"
            android:background="@drawable/edit_text_shape"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="14dp"
            android:inputType="textFilter|textNoSuggestions" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/describe_your_collection_optional"
            android:textColor="@color/tertiaryText"
            android:textStyle="bold"
            android:layout_below="@+id/codeEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="55dp"
            android:id="@+id/textView5"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/descriptionEditText"
            android:inputType="textMultiLine"
            android:background="@drawable/edit_text_shape"
            android:layout_below="@+id/textView5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="14dp"
            android:gravity="top"/>

    </RelativeLayout>

</RelativeLayout>
